--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,38 @@
 os:
-- linux
+  - linux
 
-language: python
+branches:
+  only:
+  - master
 
-python:
-  - "2.7"
-  - "3.7"
-  - "3.8"
+language: generic
+
+services:
+  - docker
+env:
+  global:
+    - REPO_NAME=pyfoil
+    - DOCKER_WORKING_DIR=/home/mdolabuser/repos/$REPO_NAME
+    - DOCKER_MOUNT_DIR=/home/mdolabuser/travis/$REPO_NAME
+  jobs:
+    - DOCKER_TAG=py2-latest
+    - DOCKER_TAG=py3-stable
+    - DOCKER_TAG=py3-latest
+
+before_install:
+  - docker pull mdolab/public:$DOCKER_TAG
+  # run Docker, key is we mount the current Travis directory into Docker to access content of repo
+  - docker run -t -d 
+        --name app
+        --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR"
+        mdolab/public:$DOCKER_TAG
+        /bin/bash
 
 install:
-- pip install testflo==1.3.6;
+  # We thrown away the existing repo in Docker, and copy the new one in-place
+  - docker exec -it app /bin/bash -c "rm -rf $DOCKER_WORKING_DIR && cp -r $DOCKER_MOUNT_DIR $DOCKER_WORKING_DIR"
+  # install this package
+  - docker exec -it app /bin/bash -c ". \$HOME/.bashrc && pip install -e ."
 
-# install this package
-- pip install -e .;
-
-script:
-- testflo -v .;
+  script:
+  - docker exec -it app /bin/bash -c ". \$HOME/.bashrc && testflo -v ."
