--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,26 @@
-os:
-  - linux
+os: linux
+language: generic
 
 branches:
   only:
   - master
-
-language: generic
 
 services:
   - docker
 
 env:
   global:
-    - REPO_NAME=pyfoil
-    - DOCKER_WORKING_DIR=/home/mdolabuser/repos/$REPO_NAME
-    - DOCKER_MOUNT_DIR=/home/mdolabuser/travis/$REPO_NAME
-  jobs:
-    - DOCKER_TAG=c7-gcc-ompi-latest
-    - DOCKER_TAG=c7-intel-impi-latest
-    - DOCKER_TAG=u18-gcc-ompi-latest
-    - DOCKER_TAG=u18-gcc-ompi-stable
-    - DOCKER_TAG=u20-gcc-ompi-latest
-    - DOCKER_TAG=u20-gcc-ompi-stable
+    - DOCKER_REPO=public
 
-before_install:
-  - docker pull mdolab/public:$DOCKER_TAG
-  # run Docker, key is we mount the current Travis directory into Docker to access content of repo
-  - docker run -t -d 
-        --name app
-        --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR"
-        mdolab/public:$DOCKER_TAG
-        /bin/bash
+import:
+  - mdolab/.github:travis-env.yml
+  - mdolab/.github:travis-before-install.yml
 
 install:
   # We thrown away the existing repo in Docker, and copy the new one in-place
   - docker exec -it app /bin/bash -c "rm -rf $DOCKER_WORKING_DIR && cp -r $DOCKER_MOUNT_DIR $DOCKER_WORKING_DIR"
   # install this package
-  - docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install -e ."
+  - docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install ."
 
 script:
   - docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && testflo -v ."
