--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 import:
   - mdolab/.github:travis-env.yml
   - mdolab/.github:travis-before-install.yml
+  - mdolab/.github:travis-script-check.yml
 
 env:
   global:
