--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+testflo_report.out
+_html
 
 # Translations
 *.mo
@@ -106,3 +108,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# vscode
+.vscode/
+
+# vim
+*.swp
