renamed repo in yaml file

--- a/.github/azure-pipelines.yaml
+++ b/.github/azure-pipelines.yaml
@@ -1,17 +1,17 @@
 trigger:
-- master
+  - master
 
 pr:
-- master
+  - master
 
 resources:
   repositories:
-  - repository: azure_template
-    type: github
-    name: mdolab/.github
-    endpoint: mdolab
+    - repository: azure_template
+      type: github
+      name: mdolab/.github
+      endpoint: mdolab
 
 extends:
   template: azure/azure_template.yaml@azure_template
   parameters:
-    REPO_NAME: pyfoil
+    REPO_NAME: prefoil
